# NASA-LSP

./: .dead-allowlist  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  setup.cfg  test.sh  zensical.toml
.github/: generate_badges.py
.github/workflows/: publish.yaml
docs/: development.md  getting-started.md  index.md  rules.md
src/nasa_lsp/: analyzer.py  cli.py  main.py  server.py  test_runner.py
tests/: test_analyzer.py  test_architecture.py  test_cli.py  test_fuzzing.py  test_server.py  test_simulations.py
